# NHS_FLOW

./: .gitignore  README.md  app.py  generate_data.py  main.py  pyproject.toml  requirements.txt
core/: auth.py  realtime_ops.py  staff_ops.py  ui.py
core/agents/: core_agent.py  instructions.py  saved_agents.py  staff_agent.py
core/data/: beds.json  equipment.json  inventory.json  occupancy_history.json  realtime_state.json  staff.json  suppliers.json  users.json
core/realtime/: __init__.py  ai_recommendations.py  constants.py  emergency_actions.py  forecasting.py  helpers.py  manager_agent.py  manual_ops.py  map_data.py  models.py  patient_flow.py  recommendation_actions.py  recommendation_schema.py  recommendations.py  simulation.py  snapshot.py  staffing_sync.py  state.py
core/session_variables/: session_variables.py
core/tools/: check_stock_function.py  get_supplier_function.py  place_order.py  tools.py
reports/: manager_agent_comparison.md
scripts/: manager_experiment.py
