[project]
name = "nhs-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "numpy>=2.4.3",
    "openai>=1.0.0",
    "pandas>=3.0.1",
    "plotly>=5.0.0",
    "python-dotenv>=1.2.2",
    "streamlit==1.19.0",
]
